# AI_training_master

./: .gitignore  README.md  kadai1-1.py  kadai1-2-2.py  kadai1-2.py  kadai1-3.py  kadai1-3_old.py  kadai1-4.py  kadai1-5.py  main.py  optuna_study.sqlite  params.json  pyproject.toml
data_loader/: data_loader.py  json_loader.py
datasets/: data_shaper.py  utils.py
kadai1/: dataShaper.py  dataloader.py  predict.py  train.py
kadai1/models/: model.npy
models/: model.npy
optimizer/: impotance_columns.py  optimize.py  optimize_param.py
predictor/: predict.py  predict_with_lgb.py
settings/: params.py
training/: train.py  train_with_lgb.py  train_with_optuna_lgb.py
utils/: utility.py
