[tool.poetry]
name = "ai_training_master"
version = "0.1.0"
description = ""
authors = ["kento.furuhashi <kento.furuhashi@cct-inc.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
lightgbm = "^3.3.2"
pandas = "^1.4.4"
sklearn = "^0.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pyproject-flake8 = "^5.0.4.post1"
black = "^22.10.0"
isort = "^5.10.1"
typing-extensions = "^4.4.0"
optuna = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
line-length = 119

max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203,W503,E231,W605"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
# common
python_version = 3.9
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119